# quicksight-mcp

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPRINT_PLAN.md  pyproject.toml
.claude/plans/: sharded-juggling-crescent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/quicksight_mcp/: __init__.py  client.py  config.py  exceptions.py  logging_config.py  server.py
src/quicksight_mcp/brain/: __init__.py  analyzer.py
src/quicksight_mcp/core/: __init__.py  aws_client.py  cache.py  types.py
src/quicksight_mcp/learning/: knowledge.py  optimizer.py  tracker.py
src/quicksight_mcp/memory/: __init__.py  manager.py  store.py
src/quicksight_mcp/safety/: __init__.py  destructive_guard.py  exceptions.py  verification.py
src/quicksight_mcp/services/: __init__.py  analyses.py  backup.py  calculated_fields.py  chart_builders.py  dashboards.py  datasets.py  filters.py  parameters.py  sheets.py  snapshots.py  visuals.py
src/quicksight_mcp/tools/: __init__.py  _decorator.py  _models.py  _response.py  analyses.py  backup.py  calculated_fields.py  dashboards.py  datasets.py  filters.py  learning.py  parameters.py  sheets.py  visuals.py
tests/: integration_sprint1_live.py  integration_sprint2_live.py  integration_sprint2_qa_live.py  test_analyses.py  test_brain.py  test_core.py  test_datasets.py  test_decorator.py  test_learning.py  test_logging.py  test_memory.py  test_server.py  test_sprint1_features.py  test_sprint2_features.py
tests/eval/: test_evaluation.py
