[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicksight-mcp"
version = "1.1.0"
description = "The most comprehensive AWS QuickSight MCP server — 62 tools with full context memory"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Krishna Goje", email = "krishna19.gk@gmail.com"},
]
keywords = ["mcp", "quicksight", "aws", "analytics", "bi", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "boto3>=1.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "moto[quicksight]>=4.0",
    "ruff>=0.1",
]

[project.scripts]
quicksight-mcp = "quicksight_mcp.server:main"

[project.urls]
Homepage = "https://github.com/krishna-goje/quicksight-mcp"
Repository = "https://github.com/krishna-goje/quicksight-mcp"
Issues = "https://github.com/krishna-goje/quicksight-mcp/issues"
Changelog = "https://github.com/krishna-goje/quicksight-mcp/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quicksight_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
